--- a/TailwindCSS/Ejemplos/src/index.html
+++ b/TailwindCSS/Ejemplos/src/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="text-center text-white bg-red-900 p-8 font-bold text-5xl">
+    <h1 class="bg-amber-600 text-white border-black border-2">
         Bienvenido a Tailwind mediante CLI
     </h1>
+    <h2 class="text-red-600">
+        Subtitulo
+    </h2>
 </body>
 </html>
